@startuml

title __LISTENER's Class Diagram__\n

  namespace com.example.lib_network {
    namespace okhttp {
      namespace response {
        namespace listener {
          class com.example.lib_network.okhttp.response.listener.DisposeDataHandle {
              + mClass : Class<?>
              + mSource : String
              + DisposeDataHandle()
              + DisposeDataHandle()
              + DisposeDataHandle()
          }
        }
      }
    }
  }
  

  namespace com.example.lib_network {
    namespace okhttp {
      namespace response {
        namespace listener {
          interface com.example.lib_network.okhttp.response.listener.DisposeDataListener {
              {abstract} + onFailure()
              {abstract} + onSuccess()
          }
        }
      }
    }
  }
  

  namespace com.example.lib_network {
    namespace okhttp {
      namespace response {
        namespace listener {
          interface com.example.lib_network.okhttp.response.listener.DisposeDownloadListener {
              {abstract} + onFailure()
              {abstract} + onProgress()
              {abstract} + onSuccess()
          }
        }
      }
    }
  }
  

  com.example.lib_network.okhttp.response.listener.DisposeDataHandle o-- com.example.lib_network.okhttp.response.listener.DisposeDownloadListener : downloadListener
  com.example.lib_network.okhttp.response.listener.DisposeDataHandle o-- com.example.lib_network.okhttp.response.listener.DisposeDataListener : mListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
